--- a/easy-api/src/main/resources/application-dev.yml
+++ b/easy-api/src/main/resources/application-dev.yml
@@ -1,21 +1,51 @@
 project:
   # 项目访问url，无需 / 结尾
-  url: http://127.0.0.1:8888
+  url: http://127.0.0.1:8001
   # 前端访问url
   front-end-url: http://localhost:3100
   node: 127.0.0.1:${server.port}
-springdoc:
-  api-docs:
-    #是否开启文档功能
-    enabled: true
-  #包扫描路径
-  packagesToScan: com.easy.admin
 server:
   # 端口号
-  port: 8888
-logging:
-  file:
-    path: logs
+  port: 8001
+############## Sa-Token 配置 (文档: https://sa-token.cc) ##############
+sa-token:
+  # token 名称（同时也是 cookie 名称）
+  token-name: Authorization
+  # token 有效期（单位：秒） 默认12小时，-1 代表永久有效，优先级低于系统参数表配置
+  timeout: 43200
+  # token 最低活跃频率（单位：秒），如果 token 超过此时间没有访问系统就会被冻结，默认-1 代表不限制，永不冻结
+  active-timeout: -1
+  # 是否允许同一账号多地同时登录 （为 true 时允许一起登录, 为 false 时新登录挤掉旧登录）
+  is-concurrent: true
+  # 在多人登录同一账号时，是否共用一个 token （为 true 时所有登录共用一个 token, 为 false 时每次登录新建一个 token）
+  is-share: false
+  # 是否尝试从 请求体 里读取 Token
+  is-read-body: false
+  # 是否尝试从 cookie 里读取 Token，此值为 false 后，StpUtil.login(id) 登录时也不会再往前端注入Cookie
+  is-read-cookie: false
+  # 是否输出操作日志
+  is-log: true
+############## X File Storage 配置 (文档: https://x-file-storage.xuyanwu.cn) ##############
+dromara:
+  x-file-storage: #文件存储配置
+    default-platform: local-plus-1 #默认使用的存储平台
+    thumbnail-suffix: ".min.jpg" #缩略图后缀，例如【.min.jpg】【.png】
+    # 本地存储
+    local-plus:
+      # 存储平台标识
+      - platform: local-plus-1
+        # 启用存储
+        enable-storage: true
+        # 启用访问（线上请使用 Nginx 配置，效率更高）
+        enable-access: true
+        # 访问域名，例如：“http://127.0.0.1:8030/file/”，注意后面要和 path-patterns 保持一致，“/”结尾，本地存储建议使用相对路径，方便后期更换域名
+        domain: ${project.url}/file/
+        # 基础路径
+        base-path: local-plus/
+        # 访问路径
+        path-patterns: /file/**
+        # 存储路径，上传的文件都会存储在这个路径下面，默认“/”，注意“/”结尾
+        storage-path: /Users/tengchong/development/easy-vben/
 spring:
 #  elasticsearch:
 #    rest:
@@ -58,36 +88,10 @@ spring:
           url: jdbc:mariadb://${DB_HOST:127.0.0.1}:${DB_PORT:3306}/${DB_NAME:easy-vben}?useUnicode=true&characterEncoding=utf-8&useSSL=false&allowMulQueries=true&allowMultiQueries=true&serverTimezone=Asia/Shanghai&allowPublicKeyRetrieval=true&nullDatabaseMeansCurrent=true&useInformationSchema=true
           username: ${DB_USERNAME:root}
           password: ${DB_PASSWORD:123456}
-# oss 对象存储
-file:
-  storage:
-    # 文件存储方式：local - 本地存储 / oss - 对象存储
-#    type: oss
-    type: local
-    # 文件存放（local - 默认文件夹名称 / oss - 默认bucket名称）,命名规范：只能包括小写字母、数字和短划线（-）；必须以小写字母或者数字开头和结尾；长度为3~63个字符。
-    default-bucket: easy-default
-    # local - 本地存储
-    local:
-      # 用于存放上传的文件、临时文件等，以目录分隔符结尾(不要写以~开头的路径会导致无法访问)
-      path: /Users/tengchong/development/easy-vben/
-    # oss - 对象存储
-    oss:
-      # 对象存储类型，暂时仅支持 minio
-      type: minio
-      # oss api
-      endpoint: http://127.0.0.1:9000
-      # accessKey
-      access-key: tZje4eJbaR52LU5Ynmgl
-      # secretKey
-      secret-key: LSYcLw9iLDwLrLTN8znE8xC5oG4AO2Fw12dPhfmX
 # 打印sql语句,调试用
 mybatis-plus:
   configuration:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
-aj:
-  captcha:
-    # 滑动验证，底图路径，不配置将使用默认图片
-    jigsaw: classpath:images/verification
 async:
   executor:
     thread:
@@ -101,3 +105,7 @@ async:
       name-prefix: async-
       # 配置线程最大空闲时间 s
       keep-alive-seconds: 30
+beetl:
+  theme:
+    # 主题文件Root目录，为了不影响项目使用jar部署，CMS主题项目将放到项目外部，此处进作为示例。
+    root: /Users/tengchong/workspaces/github/easy-vben/easy-cms/src/main/themes
