--- a/easy-api/src/main/resources/application.yml
+++ b/easy-api/src/main/resources/application.yml
@@ -13,6 +13,10 @@ aj:
   captcha:
     # 滑动验证，底图路径，不配置将使用默认图片
     jigsaw: classpath:images/verification
+    pic-click: classpath:images/pic-click
+    type: blockPuzzle
+    cache-type: redis
+    water-mark: Easy Admin
 ############## Spring 配置 ##############
 spring:
   profiles:
