feat: 添加工作流

--- a/easy-api/pom.xml
+++ b/easy-api/pom.xml
@@ -44,6 +44,10 @@
             <groupId>com.easy.admin</groupId>
             <artifactId>easy-cms</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.easy.admin</groupId>
+            <artifactId>easy-workflow</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
