--- a/easy-common/easy-core/src/main/resources/default-config.properties
+++ b/easy-common/easy-core/src/main/resources/default-config.properties
@@ -6,7 +6,7 @@
 spring.aop.proxy-target-class=true
 # \u6392\u9664\u81EA\u52A8\u914D\u7F6E\u7C7B
 spring.autoconfigure.exclude[0]=com.alibaba.druid.spring.boot3.autoconfigure.DruidDataSourceAutoConfigure
-#spring.autoconfigure.exclude[1]=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
+spring.autoconfigure.exclude[1]=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
 #spring.autoconfigure.exclude[2]=org.springframework.boot.actuate.autoconfigure.security.servlet.ManagementWebSecurityAutoConfiguration
 
 # \u6392\u9664\u4E00\u4E9B\u9759\u6001\u8D44\u6E90\uFF0C\u4EE5\u63D0\u9AD8\u6548\u7387
